--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Smart Brain</h3>
-								<p>A React App that utilizes Node.js, a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photograph url's submitted by the user</p> 
+								<p>Smart Brain is a React App that utilizes Node.js, a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photograph url's submitted by the user</p> 
 							</header>
 						</article>
 						<article class="item">
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
-								<p>Sample startup landing page that allows the user to submit their email address for future updates</p>
+								<p>This is a sample startup landing page that allows the user to submit their email address for future updates</p>
 							</header>
 						</article>
 					</div>
@@ -128,14 +128,14 @@
 							<a href="https://willdorsett.github.io/robofriends/" class="image fit"><img src="images/robofriends.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Robofriends</h3>
-								<p>Applicaiton built with React, allows user to utilize search bar which immediately updates serch results of users in database.</p>
+								<p>Robofriends is an applicaiton built with React, allows user to utilize search bar which immediately updates serch results of users in database.</p>
 							</header>
 						</article>	
 						<article class="item">
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Score Keeper</h3>
-								<p>App that allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
+								<p>Score Keeper is an app that allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
 							</header>
 						</article> 
 					</div>
@@ -165,7 +165,7 @@
 				<p>
 					I am seeking a full-time role where I can contribute my skills both in coding and business to help a company achieve their goals.
 				</p>	
-				<p>	<b>Skills:</b> HTML5, CSS3, JavaScript, AJAX, DOM
+				<p>	<b>Skills:</b> HTML5, CSS3, JavaScript, REACT, AJAX, DOM
 					Manipulation, NodeJS, ExpressJS, REST, SQL, NoSQL, MongoDB, Schema Design, Authentication from
 					scratch, Common Security Issues such as SQL Injection, ESS, Deploying Apps, Cloud Databases, Image
 					Upload and Storage, Maps and Geocoding, and more.
