--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<a href="#" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
 
 				<p>	
-					Hello, my name is Will and I am a full stack web developer from North Carolina.  I am passionate about always pushing to poroduce the best product that exceeds the needs of the client.  
+					Hello, my name is Will and I am a full stack web developer from North Carolina.  I am passionate about always pushing to produce the best product that exceeds the needs of the client.  
 				</p>	
 				<p>	<b>Languages:</b>HTML, CSS, JavaScript, Python</p> 
 				<p>	<b>Framework/Libraries:</b>Node.js, Express, React, Mongoose, Restful API, Typescript, Wordpress, Shopify</p> 
